force-app/main/default/objects/AssignedResource/fields/Resource_Is_A_Person__c.field-meta.xml
<CustomField>
    <fullName>Resource_Is_A_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Is A Person</label>
    <type>Checkbox</type>
</CustomField>