force-app/main/default/objects/AssignedResource/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Assigned Resources</relationshipLabel>
    <relationshipName>Assigned_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>