force-app/main/default/objects/AssignedResource/fields/User_Is_System_Admin__c.field-meta.xml
<CustomField>
    <fullName>User_Is_System_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Is System Admin</label>
    <type>Checkbox</type>
</CustomField>